--- a/style/style.css
+++ b/style/style.css
@@ -101,8 +101,12 @@ font-size: 20px;
  .development-btn{
     width: 140px;
     height: 35px; 
+    margin-left: 150px;
     
 
+ }
+ .not{
+ margin-left: 40px;
  }
  #h2{
     font-weight: 700;
