added information of html css and javascript

--- a/style/style.css
+++ b/style/style.css
@@ -135,7 +135,45 @@ font-size: 20px;
     padding:30px;
     border-radius: 10px;
  }
+ 
 .benefit{
     width: 1140px;
     height: 600px;
+}
+.text-center{
+   text-align: center;
+}
+.skills{
+   width: 1140px;
+   margin: 80px auto;
+   
+}
+.skill-container{
+   display: flex;
+   gap: 30px;
+   margin-top: 40px;
+   /* padding: 20px; */
+
+}
+a{
+   color: #0D1321;
+}
+.section-title{
+   font-weight: 700;
+   font-size: 32px;
+}
+.skill-1 {
+   background-color: rgba(255, 76, 30, 0.05);
+   padding: 20px 20px 20px 20px;
+   border-radius: 10px;
+}
+.skill-2{
+   background-color: rgba(0, 76, 232, 0.05);
+   border-radius: 10px;
+   padding: 20px 20px 20px 20px;
+}
+.skill-3{
+   background-color: rgba(255, 223, 0, 0.05);
+   border-radius: 10px;
+   padding: 20px 20px 20px 20px;
 }
